Upgrade to dotnet 8; Kafka types dictionary

--- a/backend/src/BoilerPlate.App.API/Properties/launchSettings.json
+++ b/backend/src/BoilerPlate.App.API/Properties/launchSettings.json
@@ -4,8 +4,7 @@
       "commandName": "Project",
       "applicationUrl": "https://localhost:13096;http://localhost:13095",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local",
-        "Jwt__PrivateKey": ""
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     },
     "Development": {
