--- a/backend/src/BoilerPlate.Data.DAL/BoilerPlate.Data.DAL.csproj
+++ b/backend/src/BoilerPlate.Data.DAL/BoilerPlate.Data.DAL.csproj
@@ -20,4 +20,8 @@
       <ProjectReference Include="..\BoilerPlate.Data.Domain\BoilerPlate.Data.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
