--- a/backend/test/BoilerPlate.Tests.Base/BoilerPlate.Tests.Base.csproj
+++ b/backend/test/BoilerPlate.Tests.Base/BoilerPlate.Tests.Base.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="xunit" Version="2.5.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\..\src\BoilerPlate.Core\BoilerPlate.Core.csproj" />
     <ProjectReference Include="..\..\src\BoilerPlate.Data.Seeds\BoilerPlate.Data.Seeds.csproj" />
     <ProjectReference Include="..\BoilerPlate.Tests.Seeds\BoilerPlate.Tests.Seeds.csproj" />
+    <ProjectReference Include="..\..\src\BoilerPlate.App.API\BoilerPlate.App.API.csproj" />
   </ItemGroup>
 
 </Project>
