--- a/backend/src/BoilerPlate.App.API/appsettings.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.json
@@ -9,6 +9,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpLogging": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
@@ -34,6 +35,6 @@
     "ConsumerDebug": "generic",
     "ProducerDebug": "msg",
     "ConsumerTopic": "",
-    "AdminReplicationFactor": 3
+    "AdminReplicationFactor": 1
   }
 }
