--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,7 @@ COPY . /app
 RUN dotnet publish src/BoilerPlate.App.API/BoilerPlate.App.API.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
+RUN apt-get update && apt-get install -y curl
 WORKDIR /app
 COPY --from=build /app/out .
 ENV ASPNETCORE_HTTP_PORTS=80
