--- a/backend/src/BoilerPlate.App.API/appsettings.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.json
@@ -2,16 +2,28 @@
   "ConnectionStrings": {
     "Default": ""
   },
-  "Logging": {
-    "Console": {
-      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
-    },
-    "LogLevel": {
+
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.HttpLogging": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      "Override": {
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.HttpLogging": "Information",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Properties": {
+      "ApplicationName": "BoilerPlate"
     }
+  },
+
+  "ElasticSearch": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*",
   "Jwt": {
