--- a/configs/backend/appsettings.Production.json
+++ b/configs/backend/appsettings.Production.json
@@ -1,4 +1,20 @@
 {
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "indexFormat": "serilog-{0:yyyy.MM.dd}",
+          "connectionTimeout": 5,
+          "autoRegisterTemplate": true,
+          "autoRegisterTemplateVersion": "ESv8"
+        }
+      }
+    ]
+  },
   "FileStorage": {
     "RootDirectory": "/app/file-storage"
   },
