--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,15 @@ services:
     image: boiler-plate/nginx:${BOILER_PLATE_NGINX_TAG}
     build:
       context: .
-      args:
-        - BOILER_PLATE_ENVIRONMENT=${BOILER_PLATE_ENVIRONMENT}
     ports:
       - 80:80
       - 443:443
     networks:
       - boiler-plate-network
+    volumes:
+      - ./configs/nginx/app:/app:ro
+      - ./configs/nginx/conf/nginx.${BOILER_PLATE_ENVIRONMENT}.conf:/etc/nginx/conf.d/default.conf:ro
+      - ${BOILER_PLATE_DATA_PATH}/nginx/certs:/etc/certs:ro
     restart: always
     depends_on:
       backend:
@@ -51,6 +53,7 @@ services:
       ConnectionStrings__Default: ${BOILER_PLATE_POSTGRES_CONNECTION}
       Jwt__PublicKey: ${BOILER_PLATE_JWT_PUBLIC_KEY}
       Jwt__PrivateKey: ${BOILER_PLATE_JWT_PRIVATE_KEY}
+      Serilog__WriteTo__1__Args__nodeUris: "http://elastic:${BOILER_PLATE_ELASTIC_PASSWORD}@elasticsearch:9200"
     volumes:
       - ./configs/backend/appsettings.Production.json:/app/appsettings.Production.json:ro
       - ${BOILER_PLATE_DATA_PATH}/file-storage:/app/file-storage:rw
@@ -58,6 +61,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      elasticsearch-setup:
+        condition: service_completed_successfully
     healthcheck:
       test: [ "CMD-SHELL", "curl -v http://localhost/healthz | grep -q 'Healthy'" ]
       interval: 10s
@@ -138,8 +143,6 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:${BOILER_PLATE_ELK_TAG}
-    ports:
-      - ${BOILER_PLATE_KIBANA_PORT}:5601
     networks:
       - boiler-plate-network
     environment:
@@ -147,13 +150,13 @@ services:
       ELASTICSEARCH_USERNAME: kibana_system
       ELASTICSEARCH_PASSWORD: ${BOILER_PLATE_KIBANA_PASSWORD}
       TELEMETRY_ENABLED: false
+      SERVER_BASEPATH: /kibana
+      SERVER_REWRITEBASEPATH: true
     volumes:
       - ${BOILER_PLATE_DATA_PATH}/elk/kibana/data:/usr/share/kibana/data:rw
     mem_limit: 1g
     restart: always
     depends_on:
-      elasticsearch:
-        condition: service_healthy
       elasticsearch-setup:
         condition: service_completed_successfully
     healthcheck:
