--- a/configs/nginx/conf/nginx.dev.conf
+++ b/configs/nginx/conf/nginx.dev.conf
@@ -1,19 +1,26 @@
 server {
-    listen 80;
-    listen [::]:80;
+  listen 80;
+  listen [::]:80;
 
-    server_name localhost;
+  server_name localhost;
 
-    location / {
-      root /app/html;
-      try_files $uri /index.html;
-    }
+  location / {
+    root /app/html;
+    # try_files $uri /index.html;
+    try_files $uri $uri/ =404;
+  }
 
-    location /api/ {
-      proxy_pass http://backend/api/;
-    }
+  location /api/ {
+    proxy_pass http://backend/api/;
+  }
 
-    location /swagger/ {
-      proxy_pass http://backend/swagger/;
-    }
+  location /swagger/ {
+    proxy_pass http://backend/swagger/;
+  }
+
+  location /kibana/ {
+    proxy_pass http://kibana:5601;
+    proxy_redirect off;
+    proxy_buffering off;
+  }
 }
