--- a/backend/src/BoilerPlate.App.API/appsettings.Development.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.Development.json
@@ -29,5 +29,8 @@
     "Enabled": false,
     "Servers": "localhost:29091",
     "ConsumerTopic": "boiler-plate.test"
+  },
+  "Telegram": {
+    "Enabled": false
   }
 }
