--- a/backend/src/BoilerPlate.App.API/appsettings.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.json
@@ -2,7 +2,6 @@
   "ConnectionStrings": {
     "Default": ""
   },
-
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -21,10 +20,6 @@
       "ApplicationName": "BoilerPlate"
     }
   },
-
-  "ElasticSearch": {
-    "Uri": "http://localhost:9200"
-  },
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "boiler-plate-api",
@@ -39,6 +34,7 @@
     }
   },
   "FileStorage": {
+    "Enabled": true,
     "RootDirectory": ""
   },
   "Kafka": {
@@ -48,5 +44,9 @@
     "ProducerDebug": "msg",
     "ConsumerTopic": "",
     "AdminReplicationFactor": 1
+  },
+  "Telegram": {
+    "Enabled": true,
+    "BotToken": ""
   }
 }
