--- a/backend/src/BoilerPlate.App.API/appsettings.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.json
@@ -28,6 +28,10 @@
     "LifetimeInMinutes": 30,
     "RefreshTokenLifetimeInMinutes": 1440
   },
+  "ServiceProviderOptions": {
+    "ValidateScopes": true,
+    "ValidateOnBuild": false
+  },
   "Coravel": {
     "Queue": {
       "ConsummationDelay": 1
@@ -48,5 +52,10 @@
   "Telegram": {
     "Enabled": true,
     "BotToken": ""
+  },
+  "HealthChecks": {
+    "Enabled": true,
+    "Delay": 120,
+    "Period": 30
   }
 }
