--- a/configs/backend/appsettings.Production.json
+++ b/configs/backend/appsettings.Production.json
@@ -1,5 +1,10 @@
 {
   "Serilog": {
+    "MinimumLevel": {
+      "Override": {
+        "System.Net.Http.HttpClient.telegram_bot_client": "Warning"
+      }
+    },
     "WriteTo": [
       {
         "Name": "Console"
@@ -21,5 +26,38 @@
   "Kafka": {
     "Servers": "kafka:29091",
     "ConsumerTopic": "boiler-plate"
+  },
+  "HealthChecks": {
+    "Services": [
+      {
+        "Type": "postgres"
+      },
+      {
+        "Type": "elasticsearch",
+        "Uri": ""
+      },
+      {
+        "Type": "kibana",
+        "Uri": "http://kibana:5601/kibana"
+      },
+      {
+        "Type": "kafka"
+      },
+      {
+        "Type": "kafka-ui",
+        "Uri": "http://kafka-ui:8080/kafka-ui"
+      },
+      {
+        "Type": "nginx",
+        "Uri": "http://nginx/health"
+      }
+    ],
+    "Publishers": [
+      {
+        "Type": "telegram",
+        "ChatId": "",
+        "PublishOnlyErrors": true
+      }
+    ]
   }
 }
