--- a/configs/nginx/conf/nginx.dev.conf
+++ b/configs/nginx/conf/nginx.dev.conf
@@ -23,4 +23,16 @@ server {
     proxy_redirect off;
     proxy_buffering off;
   }
+
+  location /kafka-ui/ {
+    proxy_pass http://kafka-ui:8080;
+    proxy_redirect off;
+    proxy_buffering off;
+  }
+
+  location /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200;
+  }
 }
