--- a/backend/src/BoilerPlate.Core/BoilerPlate.Core.csproj
+++ b/backend/src/BoilerPlate.Core/BoilerPlate.Core.csproj
@@ -9,7 +9,8 @@
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="CaseExtensions" Version="1.1.0" />
-      <PackageReference Include="MediatR" Version="12.1.1" />
+      <PackageReference Include="ManagedCode.MimeTypes" Version="1.0.0" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
