--- a/backend/src/BoilerPlate.Data.DAL/BoilerPlate.Data.DAL.csproj
+++ b/backend/src/BoilerPlate.Data.DAL/BoilerPlate.Data.DAL.csproj
@@ -7,12 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11" />
-      <PackageReference Include="Npgsql" Version="7.0.6" />
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql" Version="8.0.3" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     </ItemGroup>
 
     <ItemGroup>
