Smtp, imap services

--- a/backend/src/BoilerPlate.App.API/BoilerPlate.App.API.csproj
+++ b/backend/src/BoilerPlate.App.API/BoilerPlate.App.API.csproj
@@ -43,6 +43,9 @@
       <Link>appsettings.Production.json</Link>
       <DependentUpon>appsettings.json</DependentUpon>
     </Content>
+    <Content Update="appsettings.example.json">
+      <DependentUpon>appsettings.json</DependentUpon>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
