--- a/backend/src/BoilerPlate.App.API/appsettings.json
+++ b/backend/src/BoilerPlate.App.API/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "Default": ""
-  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -11,11 +8,6 @@
         "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
-    "WriteTo": [
-      {
-        "Name": "Console"
-      }
-    ],
     "Properties": {
       "ApplicationName": "BoilerPlate"
     }
@@ -23,8 +15,6 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Issuer": "boiler-plate-api",
-    "PublicKey": "",
-    "PrivateKey": "",
     "LifetimeInMinutes": 30,
     "RefreshTokenLifetimeInMinutes": 1440
   },
@@ -37,25 +27,10 @@
       "ConsummationDelay": 1
     }
   },
-  "FileStorage": {
-    "Enabled": true,
-    "RootDirectory": ""
-  },
   "Kafka": {
-    "Enabled": true,
-    "Servers": "",
     "ConsumerDebug": "generic",
     "ProducerDebug": "msg",
-    "ConsumerTopic": "",
+    "ConsumerTopic": "boiler-plate",
     "AdminReplicationFactor": 1
-  },
-  "Telegram": {
-    "Enabled": true,
-    "BotToken": ""
-  },
-  "HealthChecks": {
-    "Enabled": true,
-    "Delay": 120,
-    "Period": 30
   }
 }
