--- a/configs/backend/appsettings.Production.json
+++ b/configs/backend/appsettings.Production.json
@@ -2,12 +2,15 @@
   "Serilog": {
     "MinimumLevel": {
       "Override": {
-        "System.Net.Http.HttpClient.telegram_bot_client": "Warning"
+        "System.Net.Http.HttpClient": "Warning"
       }
     },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] {Message:lj}{NewLine}{Exception}"
+        }
       },
       {
         "Name": "Elasticsearch",
@@ -24,37 +27,61 @@
     "RootDirectory": "/app/file-storage"
   },
   "Kafka": {
-    "Servers": "kafka:29091",
-    "ConsumerTopic": "boiler-plate"
+    "Enabled": true,
+    "Servers": "kafka:29091"
+  },
+  "Telegram": {
+    "Enabled": true,
+    "Bots": [
+      {
+        "Name": "telegram.bot.logger",
+        "Token": ""
+      }
+    ]
+  },
+  "Mail": {
+    "Enabled": false,
+    "Servers": []
   },
   "HealthChecks": {
+    "Enabled": true,
+    "Delay": 120,
+    "Period": 30,
+    "Timeout": 10,
     "Services": [
       {
-        "Type": "postgres"
+        "Type": "postgres",
+        "Timeout": 5
       },
       {
         "Type": "elasticsearch",
-        "Uri": ""
+        "Uri": "",
+        "Timeout": 5
       },
       {
         "Type": "kibana",
-        "Uri": "http://kibana:5601/kibana"
+        "Uri": "http://kibana:5601/kibana",
+        "Timeout": 5
       },
       {
-        "Type": "kafka"
+        "Type": "kafka",
+        "Timeout": 5
       },
       {
         "Type": "kafka-ui",
-        "Uri": "http://kafka-ui:8080/kafka-ui"
+        "Uri": "http://kafka-ui:8080/kafka-ui",
+        "Timeout": 5
       },
       {
         "Type": "nginx",
-        "Uri": "http://nginx/health"
+        "Uri": "http://nginx/health",
+        "Timeout": 5
       }
     ],
     "Publishers": [
       {
         "Type": "telegram",
+        "BotName": "telegram.bot.logger",
         "ChatId": "",
         "PublishOnlyErrors": true
       }
